Added AssemblerBuilder and AssemblerBuilderManager.